# keyvi

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING.LESSER.md  CodingGuidelines.md  README.md  add-remotes.sh  build_wheels.sh  examples.cpp  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/: PULL_REQUEST_TEMPLATE.md  config.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: clang-tidy-post.yml  clang-tidy-review.yml  cpp-linter.yml  docs.yml  keyvi.yml  manylinux.yml  pre-commit-update.yml  pre-commit.yml  python-cibuildwheel-pybind.yml  python-cibuildwheel.yml  python-dockerimages-cibuildwheel.yml  python.yml  rust.yml  style.yml
_sources/: index.rst.txt
_sources/cpp/: index.rst.txt
_sources/python/: dictionary.rst.txt
_static/: alabaster.css
apps/bkdtree/: CMakeLists.txt  README  app_params.cpp  build_btree.cpp
apps/convex_hull/: README  app_config.cpp  app_config.h  convex_hull.cpp
apps/list_rank/: getopt.h  list_edge.cpp  merge_random.h  mm_lr.h  scan_list.cpp
apps/matrix/: app_config.h  fill_upper_tri.h  fill_value.h  matrix_blocks.h  matrix_fill.h  parse_args.cpp  scan_count.h
apps/merge_fractions/: CMakeLists.txt
apps/rtree/: app_config.h  rstarnode.h  scan_boundingbox.h
apps/spatial_join/: app_config.h  ascii2stream.cpp  definitions.h  intertree.cpp  intertree.h  joinlog.cpp  rand48.h  sortsweep.cpp  sortsweep.h
apps/unique/: unique.cpp
apps/visualize_btree/: app_config.h  visualize_btree.cpp
cmake_modules/: FindSnappy.cmake  FindSphinx.cmake  FindZSTD.cmake  GetGitRevisionDescription.cmake  LibFindMacros.cmake
contrib/: build_boost_static.sh  build_snappy_static.sh  prepare_amazon_linux_buildenv.sh
cpp/: dictionary_compiler.html  index.html
cpp0xtest/: auto_keyword.cpp  random.cpp
doc/: Doxyfile.in  RELEASE_PROCESS.md  fractiondb.dox.in  index.dox  madalgo-doxygen.css  pipelining.dox  priority_queue.dox.in
doc/algorithm/: Construction-Basics.md  Extensibility.md  Minimization.md  Persistence-Basics.md  Scaling.md
doc/code/: btree_augment.inl  code.cpp  memory.inl  progress1.inl  progress3.inl  serialization.inl  sorting_internal.inl
doc/development/: Packaging keyvi.md
doc/olddoc/: btree.tex  cache.tex  implementation.tex  lgpl-3.0.tex  tpie.tex  user_manual.tex
doc/usage/: Building keyvi dictionaries with python.md  Building keyvi dictionaries.md  Crashcourse.md  Index using python.md  Index with python.md  Keyvi Index with python.md  Using pykeyvi in EMR.md
docker/: Dockerfile
docker/manylinux/: Dockerfile
docker/manylinux-builder/: Dockerfile  build.sh  build_and_push.sh
docker/manylinux-builder-aarch64/: Dockerfile
docker/manylinux-builder-x86_64/: Dockerfile
docker/musllinux-builder-aarch64/: Dockerfile
docker/musllinux-builder-x86_64/: Dockerfile
docker/scripts/: install_boost.sh  install_ccache.sh  install_cmake.sh  install_zlib.sh
docker/ubuntu-builder/: Dockerfile
example/: README.md
keyvi/: .clang-format  .clang-tidy  .gitignore  CPPLINT.cfg  README.md  SConstruct  check-style.sh  flags.cmake  keyvi.Doxyfile
keyvi/deb/: SConscript  changelog
keyvi/tests/: .clang-tidy
packaging/debian/: changelog  control  copyright  rules
packaging/scripts/: build_package.sh
pykeyvi/: .gitignore  MANIFEST.in  README.md  ipython-pykeyvi.sh  requirements.txt  setup.py
pykeyvi/keyvicli/: cli.py
pykeyvi/scripts/: compile_json.py
pykeyvi/src/: autowrap.sh  pykeyvi.cpp  pykeyvi.pyx
pykeyvi/tests/: dictionary_compiler_test.py  manifest_test.py  match_object_test.py  statistics_test.py  test_tools.py
python/: .gitignore  MANIFEST.in  README.md  build_m1.sh  build_macosx_wheels.sh  description.md  dictionary.html  index.html  ipython-pykeyvi-mac.sh  pyproject.toml  requirements.txt  setup.py
python-pybind/: CMakeLists.txt  MANIFEST.in  pyproject.toml  setup.py
python-pybind/src/: .clang-format  CPPLINT.cfg  py_keyvi.cpp  py_match.cpp  py_match_iterator.h
python-pybind/src/compiler/: py_dictionary_compilers.cpp
python-pybind/src/completion/: py_completion.cpp
python-pybind/src/dictionary/: py_dictionary.cpp  py_match.cpp  py_match_iterator.h
python-pybind/src/index/: py_index.cpp
python-pybind/tests/: match_object_test.py  test_tools.py
python/autowrap_includes/: autowrap_tools.hpp
python/scripts/: compile_json.py
python/tests/: conftest.py  dictionary_compiler_test.py  match_object_test.py  test_tools.py  (+1 more)
rust/: Cargo.toml  build.rs
rust/keyvi_core/: cmake_modules  keyvi
rust/src/: dictionary.rs  keyvi_match.rs  keyvi_match_iterator.rs  keyvi_string.rs  lib.rs
rust/test_data/: completion_test.kv  empty-key-dict.kv  fuzzy.kv  fuzzy_non_ascii.kv  test.kv
rust/tests/: tests.rs
sphinx-docs/: conf_extra.py  index.rst
src/: main.cpp
test/: cat.cpp  getopts.cpp  magic_tpie  pipelining.cpp  pipelining2.cpp  speed-pq.sh  speedparse.pl  test_big_scan.cpp  test_job_overhead.cpp  test_parallel_sort_threshold.cpp
tests/: CMakeLists.txt  io_test.cpp  multithread_test.cpp  open_close_test.cpp
tpie/: array_view.h  atomic.cpp  backtrace.cpp  btree.h  concept_doc.h  cpu_timer.cpp  disjoint_sets.h  dummy_progress.h  exception.h  execution_time_predictor.cpp  file_base.h  file_base_crtp.h  file_count.cpp  file_stream_base.h  fractional_progress.cpp  hash.cpp  internal_vector.h  loglevel.h  logstream.h  maybe.h  memory.cpp  memory.inl  merge_sorted_runs.h  persist.h  pipe_constructors.inl  prime.h  progress_indicator_arrow.h  progress_indicator_null.h  progress_indicator_subindicator.cpp  progress_indicator_terminal.h  serialization2.h  serialization_stream.cpp  serialization_stream.h  stack.h  stats.cpp  stream_old.h  tempname.cpp  tiny.h  tpie.cpp  tpie_log.cpp  (+3 more)
travis/: build_doc.sh  build_linux.sh  build_manylinux_package.sh  build_manylinux_wheels.sh  build_osx_package.sh  build_python.sh  build_rust.sh  build_sdist_package.sh  coverage.sh  pypirc  setup_osx.sh  setup_pyenv.sh  setup_rust.sh  style.sh  upload_packages.sh
(+594 files in other folders)
